<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_version"
            android:icon="@drawable/ic_menu_android"
            android:title="@string/menu_version" />
    </group>
</menu>